Fix navbar clipping through the PagePreview

--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -12,7 +12,7 @@ nav {
     margin: 0 -1rem;
     height: 16rem;
     
-    z-index: 1;
+    z-index: 3;
 
     top: -8rem;
 
