--- a/src/components/PagePreview/pagePreview.css
+++ b/src/components/PagePreview/pagePreview.css
@@ -3,6 +3,10 @@
   width: 100%;
 
   overflow: hidden;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .page-preview-bg {
@@ -35,11 +39,11 @@
   height: 0; /*To make the background fill in the entire div*/
 
   position: relative;
-  top: 15%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -15%);
+  transform: translate(-50%, -50%);
 
-  z-index: 3;
+  z-index: 1;
 }
 
 .page-preview-container {
